fix home h1 align center

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,6 +9,7 @@
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 800;
+  text-align: center;
 }
 
 .home ul {
